# Automake-Autoconf-Template-Project

./: .gitignore  Makefile  configure
expects/abtests/asan/spectrum/slice/: ASAN:SESSION000:id:000000,sig:06,src:000000,op:havoc,rep:2.json
expects/asan/spectrum/dice/multiple/: ASAN:SESSION000:id:000000,sig:06,src:000000,op:havoc,rep:2.json
expects/asan/spectrum/dice/single/: ASAN:SESSION000:id:000000,sig:06,src:000000,op:havoc,rep:2.json
expects/asan/spectrum/slice/: ASAN:SESSION000:id:000000,sig:06,src:000000,op:havoc,rep:2.json
my_inc/: Makefile
seeds/: dummy_seed0
src/: Makefile  Makefile.am  main.cpp  main_no_abort.cpp  test_asan.cpp
